<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MateriKewarganegaraan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" >

    <TextView
        android:id="@+id/txtinklusi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:padding="20dp"
        android:text="@string/materi_kewarganegaraan"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtinklusi"
        android:layout_margin="10dp"
        android:text="@string/buku"
        android:textColor="#ffff"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="@color/blueDark"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/button1"
        android:layout_margin="10dp"
        android:text="@string/ppt"
        android:textColor="#ffff"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="@color/blueDark"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>