<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PenugasanKhatolik">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtinklusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:padding="20dp"
            android:text="Tugas Agama Khatolik"
            android:textColor="#000000"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/penugasan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinklusi"
            android:fontFamily="@font/poppins_light"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:text="@string/tugasagama"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/penugasana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/penugasan"
            android:fontFamily="@font/poppins_light"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/tugasagamaa"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/penugasanb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/penugasana"
            android:fontFamily="@font/poppins_light"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/tugasagamab"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>