<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blueDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!--<TextView
        android:id="@+id/welcometext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textColor="#000000"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>-->

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="10"
        app:iss_delay="0"
        app:iss_error_image="@drawable/backdrop"
        app:iss_period="1000"
        app:iss_placeholder="@drawable/backdrop" />

<ImageView
    android:layout_width="1000dp"
    android:layout_height="660dp"
    android:src="@drawable/halfrounded"
    android:layout_below="@id/slider"
    />
    <TextView
        android:id="@+id/menuutama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/menuutamatxt"
        android:textColor="#000000"
        android:textSize="30sp" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menuutama"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:text="Silahkan pilih menu yang tersedia!"
            android:textColor="#B2B2B2"
            android:textSize="15sp" />

    <GridLayout
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/title"
        android:layout_marginBottom="10dp"
        android:columnCount="2"
        android:paddingTop="10dp"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardBackgroundColor="#1B2758"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tentang_pajak"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/inklusi"
            android:layout_width="101dp"
            android:layout_height="5dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="8dp"
            app:cardBackgroundColor="#1B2758"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/inklusi_pajak"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/komik"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/blueDark"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/komik_pajak"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/games"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/blueDark"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_pajak"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <TextView
        android:id="@+id/infotxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/infotxt"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/slidewelcome"
        android:layout_below="@+id/infotxt"/>

    </RelativeLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>